--- a/doc/combining.texi
+++ b/doc/combining.texi
@@ -58,9 +58,11 @@ This section describes the syntactical features in common among the
 @cmd{ADD FILES}, @cmd{MATCH FILES}, and @cmd{UPDATE} commands.  The
 following sections describe details specific to each command.
 
-Each of these commands reads two or more input files and combines
-them.  The command's output becomes the new active dataset.  The input
-files are not changed on disk.
+Each of these commands reads two or more input files and combines them.  
+The command's output becomes the new active dataset.
+None of the commands actually change the input files.
+Therefore, if you want the changes to become permanant, you must explictly
+save them using an appropriate procedure or transformation (@pxref{System and Portable File IO}).
 
 The syntax of each command begins with a specification of the files to
 be read as input.  For each input file, specify FILE with a system
