manual: REGRESSION and DESCRIPTIVES make temp transformations permanent.
Ideally, this should not be the behavior, but it is better than the crash
we had before.

Suggested by John Darrington.

Bug #38787.
Bug #38786.

--- a/doc/regression.texi
+++ b/doc/regression.texi
@@ -86,6 +86,8 @@ already exists,
 choose the name of
 the variable for the predicted values similarly, but with @samp{PRED} as a
 prefix.
+When @subcmd{SAVE} is used, @pspp{} ignores @cmd{TEMPORARY}, treating
+temporary transformations as permanent.
 
 @node Examples
 @subsection Examples
