sys-file-reader: Accept measurement value of zero without complaint.
SPSS 14 seemed to output a measurement value of 0 for string variables,
but SPSS 21 does the same thing for numeric variables.  We might as well
accept it.

Reported by Mindaugus.
Bug #39502

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
 
 Changes after 0.8.0:
 
+ * Notable bug fixes:
+
+   - System files written by IBM SPSS 21 are now read without warnings.
+
  * PSPPIRE graphical user interface improvements:
 
    - Syntax windows now parse syntax in "auto" mode, which in practice
