--- a/NEWS
+++ b/NEWS
@@ -6,15 +6,18 @@ Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
 
 Changes after 0.8.0:
 
- * Notable bug fixes:
-
-   - System files written by IBM SPSS 21 are now read without warnings.
-
  * PSPPIRE graphical user interface improvements:
 
    - Syntax windows now parse syntax in "auto" mode, which in practice
      should mean that both "batch" and "interactive" syntax now works,
      instead of just "interactive" syntax.
+
+ * Notable bug fixes:
+
+   - System files written by IBM SPSS 21 are now read without warnings.
+
+   - PSPPIRE should now more gracefully handle syntax files that contain
+     errors.
 
 Changes from 0.6.2 to 0.8.0:
 
