--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,11 @@ Copyright (C) 1996-2000, 2008-2013 Free Software Foundation, Inc.
 See the end for copying conditions.
 
 Please send PSPP bug reports to bug-gnu-pspp@gnu.org.
+ 
+Changes since 0.8.1:
+
+ * Charts are now rendered with colours from the Tango palette instead of fully 
+   saturated primaries.
 
 Changes from 0.8.0 to 0.8.1:
 
